--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                 const data = {
                     base64: base64Image,
                     options: {
-                        "data.format": "text"
+                        "data.format": "text",
+                        "ocr.cls":true
                     }
                 };
 
